source column deleted

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <div style="overflow:auto">
         <table id="appsTable"><thead>
           <tr class="header-row">
-            <th data-key="role">Role</th><th data-key="company">Company</th><th data-key="location">Location</th><th data-key="status">Status</th><th data-key="applied">Applied</th><th data-key="next">Next step</th><th data-key="source">Source</th><th data-key="tags">Tags</th><th data-key="actions">Actions</th>
+            <th data-key="role">Role</th><th data-key="company">Company</th><th data-key="location">Location</th><th data-key="status">Status</th><th data-key="applied">Applied</th><th data-key="next">Next step</th><th data-key="tags">Tags</th><th data-key="actions">Actions</th>
           </tr>
           <tr class="filters-row">
             <th data-key="role" class="filter-cell inactive"><input type="text" class="column-filter" data-key="role" placeholder="Filter role"></th>
