--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             <button class="btn ghost" id="ghUploadBtn">Upload now</button>
           </div>
           <div class="file-name" id="ghStatus" style="margin-top:8px"></div>
-          <div class="file-name" style="margin-top:4px"><strong>Target file:</strong> myjob-nginx/myjobs_backup.json</div>
+          <div class="file-name" style="margin-top:4px"><strong>Target file:</strong> myjobs_backup.json</div>
           <p class="help" style="margin-top:10px">Tip: create a fine-grained token with <b>Contents: Read &amp; Write</b> on the repo. The token never leaves this browser, but anyone with access to the device could read it.</p>
         </div>
       </div>
