--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ const DEFAULT_REMOTE_DATA_URL = './myjobs_backup.json';
 const AUTO_REMOTE_IMPORT_MAX_APPS = 1;
 const GITHUB_CONFIG_KEY = 'MYJOBS_GITHUB_SYNC';
 const GITHUB_UPLOAD_DEBOUNCE_MS = 1500;
-const GITHUB_DATA_PATH = 'myjob-nginx/myjobs_backup.json';
+const GITHUB_DATA_PATH = 'myjobs_backup.json';
 
 function getFileStatusEl(){ return document.getElementById('fileSaveStatus'); }
 function updateFileSaveStatus(message, isError=false){
