--- a/index.html
+++ b/index.html
@@ -37,6 +37,18 @@
   .file-picker{display:flex;gap:10px;align-items:center;flex-wrap:wrap;margin-top:6px}
   .file-name{font-size:12px;color:var(--muted)}
   .file-name strong{color:var(--ink-2)}
+  .portals-list{display:flex;flex-direction:column;gap:10px;margin-top:10px}
+  .portal-link{display:flex;flex-direction:column;padding:10px;border:1px solid var(--line);border-radius:10px;background:#fff;box-shadow:var(--shadow);text-decoration:none;color:var(--ink-2);transition:.2s}
+  .portal-link strong{font-size:14px;color:var(--brand-2)}
+  .portal-link span{font-size:12px;color:var(--muted)}
+  .portal-link:hover{transform:translateY(-1px);box-shadow:0 8px 20px rgba(16,75,75,.12)}
+  .portal-controls{margin-top:12px}
+  .portal-controls .btn.small{padding:6px 12px}
+  .portal-choices{display:none;margin-top:10px;padding:10px;border:1px solid var(--line);border-radius:10px;background:#f8fcfb;box-shadow:inset 0 1px 3px rgba(16,75,75,.08);max-height:220px;overflow:auto}
+  .portal-choices.active{display:grid;grid-template-columns:repeat(auto-fit,minmax(190px,1fr));gap:8px}
+  .portal-choices label{display:flex;gap:8px;align-items:flex-start;font-size:12px;color:var(--ink-2)}
+  .portal-choices label div{display:flex;flex-direction:column;gap:2px}
+  .portal-choices label span{font-size:11px;color:var(--muted)}
   .grid{display:grid;gap:16px}
   .filters{display:flex;gap:12px;flex-wrap:wrap;margin-bottom:12px;align-items:flex-end}
   .filters label{font-size:12px;color:var(--muted);display:flex;flex-direction:column;gap:6px}
@@ -130,6 +142,15 @@
         <h3>Saved searches</h3>
         <div id="savedSearches"></div>
         <button class="btn ghost" onclick="ui.go('search')">Create search</button>
+      </div>
+      <div class="card">
+        <h3>Company portals</h3>
+        <p class="help">Jump straight into major employer career sites.</p>
+        <div id="majorPortals" class="portals-list"></div>
+        <div class="portal-controls">
+          <button class="btn ghost small" type="button" id="customizePortalsBtn">Customize list</button>
+          <div id="portalChoices" class="portal-choices"></div>
+        </div>
       </div>
       <div class="card">
         <h3>Automation links</h3>
@@ -461,6 +482,18 @@ const defaultState = {
   searches:[{id:id(), name:"Battery / Ohio", q:"Battery Test Engineer OR Cell Testing", loc:"Ohio", sites:["Google Jobs","LinkedIn","Indeed"], created:Date.now()}],
   applications:[{id:id(), role:"Cell Testing Engineer", company:"Gotion, Inc.", location:"Independence, OH", status:"Applied", applied:today(), next:"", source:"Greenhouse", link:"", resumeUrl:'', resumeFile:null, tags:["Battery","Testing"], notes:"Submitted via Greenhouse.", created:Date.now()}]
 };
+const MAJOR_PORTALS = [
+  { id:'toyota', name:'Toyota Careers', url:'https://careers.toyota.com/', note:'Manufacturing, engineering, and corporate roles' },
+  { id:'siemens', name:'Siemens Jobs & Careers', url:'https://jobs.siemens.com/', note:'Automation, energy, and healthcare opportunities' },
+  { id:'bosch', name:'Bosch Careers', url:'https://www.bosch.us/careers/', note:'Mobility, industrial technology, and R&D positions' },
+  { id:'gm', name:'General Motors Careers', url:'https://search-careers.gm.com/', note:'Electrification, manufacturing, and business paths' },
+  { id:'tesla', name:'Tesla Careers', url:'https://www.tesla.com/careers', note:'EV, energy, and operations roles worldwide' },
+  { id:'amazon', name:'Amazon Jobs', url:'https://www.amazon.jobs/', note:'Corporate, operations, AWS, and robotics roles' },
+  { id:'microsoft', name:'Microsoft Careers', url:'https://careers.microsoft.com/', note:'Software, cloud, hardware, and product teams' },
+  { id:'samsung', name:'Samsung Careers', url:'https://www.samsungcareers.com/global?cmd=homeView', note:'Semiconductor, consumer electronics, and software' }
+];
+const PORTAL_CONFIG_KEY = 'MYJOBS_PORTAL_CHOICES';
+let portalSelections = MAJOR_PORTALS.map(p=>p.id);
 
 // ---------- Helpers ----------
 function id(){ return 'id_'+Math.random().toString(36).slice(2,9) }
@@ -1072,6 +1105,80 @@ if(clearFiltersBtn) clearFiltersBtn.addEventListener('click',()=>{
   renderTable();
 });
 
+function loadPortalSelections(){
+  try{
+    const raw = localStorage.getItem(PORTAL_CONFIG_KEY);
+    if(raw!==null){
+      const parsed = JSON.parse(raw);
+      if(Array.isArray(parsed)){
+        return parsed.filter(id => MAJOR_PORTALS.some(p=>p.id===id));
+      }
+      return [];
+    }
+  }catch(err){
+    console.warn('Portal selections load failed', err);
+  }
+  return MAJOR_PORTALS.map(p=>p.id);
+}
+
+function savePortalSelections(selection){
+  portalSelections = Array.isArray(selection) ? [...selection] : [];
+  try{
+    localStorage.setItem(PORTAL_CONFIG_KEY, JSON.stringify(portalSelections));
+  }catch(err){
+    console.warn('Portal selections save failed', err);
+  }
+  renderMajorPortals();
+}
+
+function setupPortalControls(){
+  const button=$('#customizePortalsBtn');
+  const choices=$('#portalChoices');
+  if(!button || !choices) return;
+  portalSelections = loadPortalSelections();
+  const selectedSet=new Set(portalSelections);
+  choices.innerHTML=MAJOR_PORTALS.map(({id,name,note})=>`
+    <label>
+      <input type="checkbox" value="${id}">
+      <div><strong>${name}</strong>${note?`<span>${note}</span>`:''}</div>
+    </label>
+  `).join('');
+  const checkboxes=choices.querySelectorAll('input[type="checkbox"]');
+  checkboxes.forEach(cb=>{
+    cb.checked = selectedSet.size ? selectedSet.has(cb.value) : false;
+    cb.addEventListener('change',()=>{
+      const checked = Array.from(choices.querySelectorAll('input[type="checkbox"]:checked')).map(x=>x.value);
+      savePortalSelections(checked);
+    });
+  });
+  button.addEventListener('click',()=>{
+    const active=choices.classList.toggle('active');
+    button.textContent=active?'Done customizing':'Customize list';
+  });
+  renderMajorPortals();
+}
+
+function renderMajorPortals(){
+  const container=$('#majorPortals');
+  if(!container) return;
+  if(!Array.isArray(MAJOR_PORTALS) || !MAJOR_PORTALS.length){
+    container.innerHTML='<span class="muted">Add your favorite portals to the config.</span>';
+    return;
+  }
+  const activeIds = Array.isArray(portalSelections) ? portalSelections : [];
+  const items = activeIds.length ? MAJOR_PORTALS.filter(p=>activeIds.includes(p.id)) : [];
+  if(!items.length){
+    container.innerHTML='<span class="muted">No companies selected. Use “Customize list” below to add portals.</span>';
+    return;
+  }
+  container.innerHTML=items.map(({name,url,note})=>`
+    <a class="portal-link" href="${url}" target="_blank" rel="noopener">
+      <strong>${name}</strong>
+      <span>${note||''}</span>
+    </a>
+  `).join('');
+}
+
 /* ============================== Dashboard ============================== */
 function renderDashboard(){
   const counts=STATUS_ORDER.map(s=>({s,n:state.applications.filter(a=>a.status===s).length}));
@@ -1082,6 +1189,7 @@ function renderDashboard(){
   const req=['firstName','lastName','email','phone','city','state','country','linkedin','resumeUrl','title','summary'];
   const filled=req.filter(k=>String(p[k]||'').trim()).length;
   $('#profileScore').innerHTML=`Profile completeness: <b>${Math.round((filled/req.length)*100)}%</b>`;
+  renderMajorPortals();
   renderSavedSearches();
   if(window._lastBookmarklet) $('#bookmarkletArea').innerHTML = window._lastBookmarklet + (window._capBookmarklet||'');
 }
@@ -1703,11 +1811,13 @@ function exportCSV(){
 
 /* ================================ Boot ================================ */
 function renderAll(){ renderTable(); renderDashboard(); }
+portalSelections = loadPortalSelections();
 renderAll();
 initColumnFilters();
 setupResumeFilePicker();
 setupFileSyncControls();
 setupGitHubSyncControls();
+setupPortalControls();
 setupRemoteImportControls();
 attemptAutoRemoteImport();
 
